@@ -431,7 +431,7 @@ done | while read sec; do ( $sleep $sec; $sleep $sec) done
 s=SECONDS
 set -o pipefail
 for ((i=0; i < 30; i++))
-do	print hello
+do	print hello 2>/dev/null
 	sleep .1
 done |  $sleep 1
 (( (SECONDS-s) < 2 )) || err_exit 'early termination not causing broken pipe'
@@ -470,7 +470,7 @@ bintrue=$(whence -p true)
 set -o pipefail
 float start=$SECONDS end 
 for ((i=0; i < 2; i++))
-do	print foo
+do	print foo 2>/dev/null
 	sleep 1.5
 done | { read; $bintrue; end=$SECONDS ;}
 (( (SECONDS-start) < 1 )) && err_exit "pipefail not waiting for pipe to finish"
